variables.RunFour.scala.error
Erreur de compilation :
RunFour:2: error: '(' expected but identifier found.
while ((!estSurBiscuit()) && (nb != 3)) { if estSurBiscuit() {nb = nb + 1
                                             ^RunFour:4: error: illegal start of simple expression
                                    else {avance()}} 
                                                   ^